Several updates regarding the feedback at the meeting the 25/11/2024, such as renaming Phecode to Phenotype, adding Protein synonyms and associating directly the sample to the score (PheWAS Applications)
